--- a/index.html
+++ b/index.html
@@ -17,75 +17,46 @@
   </head>
   <body>
     <h1>project 12</h1>
-    <!-- <header>
-      <nav>
-        <a href=""><i class="fa-solid fa-home"></i>home</a>
-        <a href=""><i class="fa-regular fa-user"></i>about</a>
-        <a href=""><i class="fa-regular fa-envelope"></i>contact</a>
-      </nav>
-    </header> -->
-
-    <header>
-      <nav>
-        <ul>
-
-          <li>
-            <a href=""><i class="fa-solid fa-home"></i>home</a>
-          </li>
-
-          <li>
-            <a href=""><i class="fa-regular fa-user"></i>about</a>
-          </li>
-
-          <li>
-            <a href=""><i class="fa-regular fa-envelope"></i>contact</a>
-          </li>
-
-        </ul>
-      </nav>
-    </header>
 
     <main class="container">
-      <!-- lists -->
-      <!-- ordered lists <ol> and unordered lists <ul>-->
-
-
-    <figure>
-        <!-- img*5[src="https://picsum.photos/id/10$/100"] -->
-        <!-- ul>li*>img[src="https://picsum.photos/id/10$/100"] -->
-        <ul>
-            <li><img src="https://picsum.photos/id/101/100" alt=""></li>
-            <li><img src="https://picsum.photos/id/102/100" alt=""></li>
-            <li><img src="https://picsum.photos/id/103/100" alt=""></li>
-            <li><img src="https://picsum.photos/id/104/100" alt=""></li>
-            <li><img src="https://picsum.photos/id/105/100" alt=""></li>
-        </ul>
-    </figure>
-
-      <div>
-        <p><i class="fa-solid fa-circle"></i> apple</p>
-        <p><i class="fa-solid fa-circle"></i> orange</p>
-        <p><i class="fa-solid fa-circle"></i> watermelon</p>
-      </div>
-
-      <ul class="fruits">
-        <li>apple</li>
-        <li>orange</li>
-        <li>watermelon</li>
-      </ul>
-
-      <div class="fruits2">
-        <div>apple</div>
-        <div>orange</div>
-        <div>watermelon</div>
-      </div>
-
-      <hr />
-      <ol reversed>
-        <li>new zealand</li>
-        <li>germany</li>
-        <li>japan</li>
-      </ol>
+      <table>
+        <thead>
+          <tr>
+            <th>title-1</th>
+            <th>title-2</th>
+            <th>title-3</th>
+            <th>title-4</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lorem, ipsum.</td>
+            <td>Atque, hic!</td>
+            <td>Tenetur, facilis?</td>
+            <td>Cumque, ab.</td>
+          </tr>
+          <tr>
+            <td>Lorem, ipsum.</td>
+            <td>Nulla, ducimus?</td>
+            <td>Beatae, cumque.</td>
+            <td>Fuga, ab!</td>
+          </tr>
+          <tr>
+            <td>Lorem, ipsum.</td>
+            <td>In, sed.</td>
+            <td>Ea, minus?</td>
+            <td>Pariatur, dolorem!</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>Totam, sint.</td>
+          </tr>
+        </tfoot>
+      </table>
     </main>
   </body>
 </html>
