--- a/index.html
+++ b/index.html
@@ -16,9 +16,44 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+        <a href="">home</a>
+        <a href="">about</a>
+        <a href="">contact</a>
+    </nav>
     <h1>project 12</h1>
 
     <main class="container">
+
+        <!-- div.text>p*10>{text-$} -->
+        <div class="text">
+            <h4>heading 4</h4>
+            <p>text-1</p>
+            <p>text-2</p>
+            <p>text-3</p>
+            <p>text-4</p>
+            <p>text-5</p>
+            <p>text-6</p>
+            <p>text-7</p>
+            <p>text-8</p>
+            <p>text-9</p>
+            <p>text-10</p>
+        </div>
+
+        <!-- ul.lists>li*10>{item-$} -->
+        <ul class="list">
+            <li>item-1</li>
+            <li>item-2</li>
+            <li>item-3</li>
+            <li>item-4</li>
+            <li>item-5</li>
+            <li>item-6</li>
+            <li>item-7</li>
+            <li>item-8</li>
+            <li>item-9</li>
+            <li>item-10</li>
+        </ul>
+
       <table>
         <thead>
           <tr>
