css transform translate rotate

--- a/index.html
+++ b/index.html
@@ -23,75 +23,20 @@
     </nav>
     <h1>project 12</h1>
 
+    <button>click me</button>
+    <a class="btn" href="" role="button">click me</a>
+    <!-- <a class="btn" href="" role="button">
+        <i class="fa-solid fa-xmark fa-2x" aria-label="Close"></i>
+    </a> -->
+
+
     <main class="container">
 
-        <!-- div.text>p*10>{text-$} -->
-        <div class="text">
-            <h4>heading 4</h4>
-            <p>text-1</p>
-            <p>text-2</p>
-            <p>text-3</p>
-            <p>text-4</p>
-            <p>text-5</p>
-            <p>text-6</p>
-            <p>text-7</p>
-            <p>text-8</p>
-            <p>text-9</p>
-            <p>text-10</p>
-        </div>
-
-        <!-- ul.lists>li*10>{item-$} -->
-        <ul class="list">
-            <li>item-1</li>
-            <li>item-2</li>
-            <li>item-3</li>
-            <li>item-4</li>
-            <li>item-5</li>
-            <li>item-6</li>
-            <li>item-7</li>
-            <li>item-8</li>
-            <li>item-9</li>
-            <li>item-10</li>
-        </ul>
-
-      <table>
-        <thead>
-          <tr>
-            <th>title-1</th>
-            <th>title-2</th>
-            <th>title-3</th>
-            <th>title-4</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lorem, ipsum.</td>
-            <td>Atque, hic!</td>
-            <td>Tenetur, facilis?</td>
-            <td>Cumque, ab.</td>
-          </tr>
-          <tr>
-            <td>Lorem, ipsum.</td>
-            <td>Nulla, ducimus?</td>
-            <td>Beatae, cumque.</td>
-            <td>Fuga, ab!</td>
-          </tr>
-          <tr>
-            <td>Lorem, ipsum.</td>
-            <td>In, sed.</td>
-            <td>Ea, minus?</td>
-            <td>Pariatur, dolorem!</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Totam, sint.</td>
-          </tr>
-        </tfoot>
-      </table>
+            <div class="parent">
+                <!-- <i class="fa-solid fa-xmark fa-2x" aria-label="Close"></i> -->
+                <!-- <div class="child"></div> -->
+                <img src="https://picsum.photos/id/1070/200" alt="">
+            </div>
     </main>
   </body>
 </html>
