--- a/index.html
+++ b/index.html
@@ -21,21 +21,15 @@
         <a href="">about</a>
         <a href="">contact</a>
     </nav>
-    <h1>project 12</h1>
-
-    <button>click me</button>
-    <a class="btn" href="" role="button">click me</a>
-    <!-- <a class="btn" href="" role="button">
-        <i class="fa-solid fa-xmark fa-2x" aria-label="Close"></i>
-    </a> -->
+    <button class="btn">i am animated on hover</button>
+    <h1>project 12 <i class="fa-solid fa-heart animate-me"></i></h1>
 
 
     <main class="container">
 
             <div class="parent">
-                <!-- <i class="fa-solid fa-xmark fa-2x" aria-label="Close"></i> -->
-                <!-- <div class="child"></div> -->
-                <img src="https://picsum.photos/id/1070/200" alt="">
+                <!-- <img src="https://picsum.photos/id/1070/100" alt=""> -->
+                <div class="child"></div>
             </div>
     </main>
   </body>
