--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>
-        <a href="">home</a>
-        <a href="">about</a>
-        <a href="">contact</a>
-    </nav>
-    <button class="btn">i am animated on hover</button>
-    <h1>project 12 <i class="fa-solid fa-heart animate-me"></i></h1>
 
+    <h1>project 12 </h1>
 
     <main class="container">
-
-            <div class="parent">
-                <!-- <img src="https://picsum.photos/id/1070/100" alt=""> -->
-                <div class="child"></div>
-            </div>
+        <svg width="" height="">
+            <!-- <circle stroke="#0f0" stroke-width="10" fill="#f99" cx="200" cy="200" r="100"></circle> -->
+            <!-- <line stroke="black" stroke-width="10" x1="30"  x2="200" y1="30" y2="200"></line>     -->
+            <rect x="50" y="50" width="100" height="100" fill="red" stroke="#000" stroke-width="3" />
+            <polygon points="100,100 300,300 150,150" fill="lime" stroke="#000" stroke-width="3" />
+        </svg>
     </main>
   </body>
 </html>
