--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
     <title>Document</title>
   </head>
   <body>
-
-    <h1>project 12 </h1>
+    <h1>Flexbox</h1>
 
     <main class="container">
-        <svg width="" height="">
-            <!-- <circle stroke="#0f0" stroke-width="10" fill="#f99" cx="200" cy="200" r="100"></circle> -->
-            <!-- <line stroke="black" stroke-width="10" x1="30"  x2="200" y1="30" y2="200"></line>     -->
-            <rect x="50" y="50" width="100" height="100" fill="red" stroke="#000" stroke-width="3" />
-            <polygon points="100,100 300,300 150,150" fill="lime" stroke="#000" stroke-width="3" />
-        </svg>
+      <!-- <article>
+            p*5>lorem100
+        </article> -->
+
+      <section>
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+      </section>
     </main>
   </body>
 </html>
